tests/invalid_inputs/sema/class_private_member_access.cpp

class C {
	int a;
};

void f() {
	C c;
	c.a = 42;	// error
}
